add colors.xml and upgrade layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FCC8D1"
+    android:background="@color/pinkkk"
     tools:context=".MainActivity">
 
     <Spinner
@@ -16,7 +16,7 @@
         android:spinnerStyle="@style/SpinnerText"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="#504B4B"
+        android:textColor="@color/whiteBest"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +33,7 @@
         android:gravity="center"
         android:maxLines="1"
         android:text="TEST"
-        android:textColor="#504B4B"
+        android:textColor="@color/grey"
         android:textSize="100sp"
         android:textStyle="bold"
         app:autoSizeTextType="uniform"
@@ -51,9 +51,9 @@
         android:layout_marginBottom="300dp"
         android:width="300dp"
         android:height="150dp"
-        android:backgroundTint="#D36080"
+        android:backgroundTint="@color/pink"
         android:text="START!"
-        android:textColor="#FEF2F4"
+        android:textColor="@color/whiteBest"
         android:textSize="75sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CZAS"
-        android:textColor="#FEF2F4"
+        android:textColor="@color/whiteBest"
         android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/timer_text_view"
@@ -84,7 +84,7 @@
         android:autoSizeTextType="uniform"
         android:text="60"
         android:textAlignment="center"
-        android:textColor="#FEF2F4"
+        android:textColor="@color/whiteBest"
         android:textSize="100sp"
         android:textStyle="bold"
         app:autoSizeTextType="uniform"
@@ -100,8 +100,8 @@
         android:height="75dp"
         android:width="175dp"
         android:textSize="20sp"
-        android:backgroundTint="#D36080"
-        android:textColor="#FEF2F4"
+        android:backgroundTint="@color/pink"
+        android:textColor="@color/whiteBest"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/howToPlay"
@@ -115,8 +115,8 @@
         android:height="75dp"
         android:width="175dp"
         android:textSize="20sp"
-        android:backgroundTint="#F47C7C"
-        android:textColor="#FEF2F4"
+        android:backgroundTint="@color/pinkk"
+        android:textColor="@color/whiteBest"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
