--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#504B4B</color>
+    <color name="whiteBest">#FEF2F4</color>
+    <color name="pinkk">#F47C7C</color>
+    <color name="pink">#D36080</color>
+    <color name="pinkkk">#FCC8D1</color>
 </resources>
