--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,12 @@
         android:scrollbarSize="8dp"
         android:spinnerStyle="@style/SpinnerText"
         android:textAlignment="center"
-        android:textStyle="bold"
         android:textColor="@color/whiteBest"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/word_text_view"
