add icon and fixed bugs

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -18,7 +18,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/word_text_view"
@@ -31,7 +32,7 @@
         android:autoSizeTextType="uniform"
         android:gravity="center"
         android:maxLines="1"
-        android:text="TEST"
+        android:text=""
         android:textColor="#504B4B"
         android:textSize="200sp"
         android:textStyle="bold"
@@ -51,7 +52,7 @@
         android:width="300dp"
         android:height="150dp"
         android:backgroundTint="#D36080"
-        android:text="START!"
+        android:text="@string/start"
         android:textColor="#FEF2F4"
         android:textSize="75sp"
         android:textStyle="bold"
@@ -65,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="CZAS"
+        android:text="@string/czas"
         android:textColor="#FEF2F4"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -81,7 +82,7 @@
         android:autoSizeMaxTextSize="30sp"
         android:autoSizeMinTextSize="12sp"
         android:autoSizeTextType="uniform"
-        android:text="60"
+        android:text=""
         android:textAlignment="center"
         android:textColor="#FEF2F4"
         android:textSize="75sp"
@@ -100,7 +101,7 @@
         android:width="175dp"
         android:height="75dp"
         android:backgroundTint="#D36080"
-        android:text="LOSUJ"
+        android:text="@string/losuj"
         android:textColor="#FEF2F4"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -115,7 +116,7 @@
         android:width="175dp"
         android:height="75dp"
         android:backgroundTint="#F47C7C"
-        android:text="JAK GRAC?"
+        android:text="@string/how"
         android:textColor="#FEF2F4"
         android:textSize="20sp"
         android:textStyle="bold"
