--- a/app/src/main/res/layout-land/activity_main2.xml
+++ b/app/src/main/res/layout-land/activity_main2.xml
@@ -11,8 +11,8 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Jak grać?"
+        android:layout_marginTop="5dp"
+        android:text="@string/how"
         android:textAlignment="center"
         android:textColor="#504B4B"
         android:textSize="75sp"
@@ -25,17 +25,18 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="@string/tut"
-        android:textAlignment="center"
-        android:textColor="#504B4B"
-        android:textSize="25sp"
-        app:autoSizeTextType="uniform"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:autoSizeMaxTextSize="100sp"
         android:autoSizeMinTextSize="10sp"
         android:autoSizeStepGranularity="2sp"
         android:autoSizeTextType="uniform"
+        android:text="@string/tut"
+        android:textAlignment="center"
+        android:textColor="#504B4B"
+        android:textSize="20sp"
         android:textStyle="bold"
+        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toTopOf="@+id/okBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +49,7 @@
         android:width="300dp"
         android:height="100dp"
         android:backgroundTint="#D36080"
-        android:text="OK"
+        android:text="@string/ok"
         android:textColor="#FEF2F4"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
