--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
         android:autoSizeTextType="uniform"
         android:gravity="center"
         android:maxLines="1"
-        android:text="TEST"
+        android:text=""
         android:textColor="@color/grey"
         android:textSize="100sp"
         android:textStyle="bold"
@@ -53,7 +53,7 @@
         android:width="300dp"
         android:height="150dp"
         android:backgroundTint="@color/pink"
-        android:text="START!"
+        android:text="@string/start"
         android:textColor="@color/whiteBest"
         android:textSize="75sp"
         android:textStyle="bold"
@@ -66,7 +66,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CZAS"
+        android:text="@string/czas"
         android:textColor="@color/whiteBest"
         android:textSize="50sp"
         android:textStyle="bold"
@@ -83,7 +83,7 @@
         android:autoSizeMaxTextSize="30sp"
         android:autoSizeMinTextSize="5sp"
         android:autoSizeTextType="uniform"
-        android:text="60"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/whiteBest"
         android:textSize="100sp"
@@ -97,12 +97,12 @@
         android:id="@+id/shuffle_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOSUJ"
-        android:height="75dp"
         android:width="175dp"
-        android:textSize="20sp"
+        android:height="75dp"
         android:backgroundTint="@color/pink"
-        android:textColor="@color/whiteBest"
+        android:text="@string/losuj"
+        android:textColor="#FCE4EC"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/howToPlay"
@@ -112,7 +112,7 @@
         android:id="@+id/howToPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="JAK GRAC?"
+        android:text="@string/how"
         android:height="75dp"
         android:width="175dp"
         android:textSize="20sp"
