--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Jak grać?"
+        android:text="@string/how"
         android:textAlignment="center"
         android:textColor="#504B4B"
         android:textSize="75sp"
@@ -48,7 +48,7 @@
         android:width="300dp"
         android:height="100dp"
         android:backgroundTint="#D36080"
-        android:text="OK"
+        android:text="@string/ok"
         android:textColor="#FEF2F4"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
