--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#504B4B</color>
     <color name="whiteBest">#FEF2F4</color>
-    <color name="pinkk">#F47C7C</color>
+    <color name="pinkk">#E371A6</color>
     <color name="pink">#D36080</color>
     <color name="pinkkk">#FCC8D1</color>
 </resources>
